# RegionOfInterest

./: CMakeLists.txt
assets/dataset/backside/Maroon-Back/: B_1942_TFV.jfif
src/: cmain.cpp  enhanced_roi_detection.h  enhancedc_roi_detection.h  main.cpp  winutil.h
